lib/libremidi/tests/corpus/Invalid/No Header Chunk/dadyhome.mid
vti_encoding:SR|utf8-nl
vti_timelastmodified:TR|09 Oct 2000 12:19:32 -0000
vti_extenderversion:SR|4.0.2.3712
vti_backlinkinfo:VX|star.html
vti_nexttolasttimemodified:TR|09 Oct 2000 14:08:00 -0000
vti_author:SR|hmbadler
vti_modifiedby:SR|hmbadler
vti_timecreated:TR|11 Aug 2002 21:09:09 -0000
vti_syncwith_localhost\\c\:\\my documents\\my webs\\geocities/c\:/my documents/my webs/geocities:TR|09 Oct 2000 12:19:32 -0000
